--- a/templates/index.html
+++ b/templates/index.html
@@ -6,5 +6,11 @@
 </head>
 <body>
     <h1>Welcome to my Flask app:)</h1>
+    <form action="/getmsg" method="GET">
+        <label>
+            <input type="text" name="name">
+        </label>
+        <input type="submit">
+    </form>
 </body>
 </html>
