--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,6 @@
 </head>
 <body>
     <h1>Welcome to my Flask app:)</h1>
-    <form action="/getmsg" method="GET">
-        <label>
-            <input type="text" name="name">
-        </label>
-        <input type="submit">
-    </form>
+    <h2>The <a href="/data">data</a> is here</h2>
 </body>
 </html>
