--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,9 @@
 <body>
     <h1>Welcome to my Flask app:)</h1>
     <h2>The <a href="/data">data</a> is here</h2>
+    {% if task %}
+        <h3>Finished task</h3>
+    {% endif %}
     <h3></h3>
 </body>
 </html>
